--- a/app/views/pages/hub.html.erb
+++ b/app/views/pages/hub.html.erb
@@ -5,7 +5,7 @@
   <div class="panel-body">
     <div class="btn-group btn-group-lg btn-group-justified">
     	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg">Customer Information</button>
+    		<button type="button" class="btn btn-default btn-lg"><%= link_to "Customer Information", controller: "customer_information" =%></button>
     	</div>
     	<div class="btn-group">
     		<button type="button" class="btn btn-default btn-lg">Job Information</button>
