Added custom class to Hub page Div to allow list items to expand to full width - drawback is that they do not behave responsibly

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,17 @@
 @import 'bootstrap';
+
+.fill-parent {
+	width: 100%;
+}
+
+.central-nav {
+	list-style-type: none;
+	float: none;
+	width: 100%;
+	display: table;
+}
+
+.central-nav li {
+	display: table-cell;
+	float: none;
+}
