--- a/app/views/pages/hub.html.erb
+++ b/app/views/pages/hub.html.erb
@@ -3,41 +3,14 @@
     <h3 class="panel-title text-center">Welcome to the Rosehill Information Management Hub</h3>
   </div>
   <div class="panel-body">
-    <div class="btn-group btn-group-lg btn-group-justified">
-    	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg"><%= link_to "Customer Information", customer_information_path %></button>
-    	</div>
-    	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg">Job Information</button>
-    	</div>
-    	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg">Order Management</button>
-    	</div>
-    	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg">Memo Management</button>
-    	</div>
-    </div>
-    <br />
-
-        <div class="btn-group btn-group-lg btn-group-justified">
-    	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg">Customer Information</button>
-    	</div>
-    	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg">Job Information</button>
-    	</div>
-    	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg">Order Management</button>
-    	</div>
-    	<div class="btn-group">
-    		<button type="button" class="btn btn-default btn-lg">Memo Management</button>
-    	</div>
+    <div class="btn-group btn-group-lg fill-parent">
+    	<ul class="central-nav">
+            <li><%= link_to "Customer Information", customer_information_path, :class => "btn btn-default btn-lg" %></li>
+            <li><%= link_to "Customer Information", customer_information_path, :class => "btn btn-default btn-lg" %></li>
+            <li><%= link_to "Customer Information", customer_information_path, :class => "btn btn-default btn-lg" %></li>
+            <li><%= link_to "Customer Information", customer_information_path, :class => "btn btn-default btn-lg" %></li>
+        </ul>
     </div>
   </div>
 </div>
 
-<br /><br />
-
-<ul>
-    <li><%= link_to "Customer Information", customer_information_path, :class => "btn btn-default btn-lg" %></li>
-</ul>
