--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<% if user_signed_in? %>
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -13,11 +14,32 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Customer Information", customer_information_path %></li>
+        <li><%= link_to "Job Information", customer_information_path %></li>
+        <li><%= link_to "Order Management", customer_information_path %></li>
+        <li><%= link_to "Memo Management", customer_information_path %></li>
+        <li><%= link_to "Install Schedule", customer_information_path %></li>
+      </ul>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<% if user_signed_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Internal Info <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Reports</a></li>
+            <li><a href="#">Employee Information</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Administration</a></li>
+            <li class="divider"></li>
+          </ul>
+        </li>        
 					<li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 				<% end %>
 			</ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<% end %>
