Added panel and table information for customer information page

--- a/app/views/pages/customer_information.html.erb
+++ b/app/views/pages/customer_information.html.erb
@@ -1,2 +1,30 @@
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title center">Customer Information</h3>
+  </div>
+  <div class="panel-body">
+  	<div class="table-responsive">
+	  	<table class="table">
+	  		<tr>
+	  			<th>Job #</th>
+	  			<th>Customer Name</th>
+	  			<th>Phone Number</th>
+	  			<th>Email Address</th>
+	  			<th>Job Address</th>
+	  			<th>City</th>
+	  			<th>Postal Code</th>
+	  		</tr>
 
-<h1>This is the Customer Information Page</h1>
+	  		<tr>
+	  			<td></td>
+	  			<td></td>
+	  			<td></td>
+	  			<td></td>
+	  			<td></td>
+	  			<td></td>
+	  			<td></td>
+	  		</tr>
+	  	</table>
+	</div>
+  </div>
+</div>
