added button for new customer form, customized bootstrap, updated header and added new customer view and controller method

--- a/app/views/pages/customer_information.html.erb
+++ b/app/views/pages/customer_information.html.erb
@@ -1,3 +1,9 @@
+<%= link_to new_customer_path, class: "btn btn-primary pull-right" do %>
+	<span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;Add New Customer
+<% end %>
+
+<br /><br />
+
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title center">Customer Information</h3>
