--- a/app/views/pages/customer_information.html.erb
+++ b/app/views/pages/customer_information.html.erb
@@ -12,17 +12,17 @@
   	<div class="table-responsive">
 	  	<table class="table">
 	  		<tr>
-	  			<th>Job #</th>
 	  			<th>Customer Name</th>
 	  			<th>Phone Number</th>
 	  			<th>Email Address</th>
-	  			<th>Job Address</th>
+	  			<th>Address</th>
 	  			<th>City</th>
 	  			<th>Postal Code</th>
 	  		</tr>
 
+			<% @customers.each do |customer| %>
 	  		<tr>
-	  			<td></td>
+	  			<td><%= customer.first_name customer.last_name%></td>
 	  			<td></td>
 	  			<td></td>
 	  			<td></td>
@@ -30,6 +30,7 @@
 	  			<td></td>
 	  			<td></td>
 	  		</tr>
+	  		<% end %>
 	  	</table>
 	</div>
   </div>
