--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,10 +15,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Customer Information", customer_information_path %></li>
-        <li><%= link_to "Order Management", customer_information_path %></li>
-        <li><%= link_to "Memo Management", customer_information_path %></li>
-        <li><%= link_to "Install Schedule", customer_information_path %></li>
+        <li><%= link_to "Customer Information", customers_path %></li>
+        <li><%= link_to "Order Management", customers_path %></li>
+        <li><%= link_to "Memo Management", customers_path %></li>
+        <li><%= link_to "Install Schedule", customers_path %></li>
       </ul>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
