--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,41 +1,34 @@
-<h1>Listing customers</h1>
+<%= link_to new_customer_path, class: "btn btn-primary pull-right" do %>
+  <span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;Add New Customer
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Phone number</th>
-      <th>Email address</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Postal code</th>
-      <th>Customer type</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<br /><br />
 
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr>
-        <td><%= customer.first_name %></td>
-        <td><%= customer.last_name %></td>
-        <td><%= customer.phone_number %></td>
-        <td><%= customer.email_address %></td>
-        <td><%= customer.address %></td>
-        <td><%= customer.city %></td>
-        <td><%= customer.postal_code %></td>
-        <td><%= customer.customer_type %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title center">Customer Information</h3>
+  </div>
+  <div class="panel-body">
+    <div class="table-responsive">
+      <table class="table">
+        <tr>
+          <th>Customer Name</th>
+          <th>Phone Number</th>
+          <th>Email Address</th>
+          <th>Address</th>
+          <th>Customer Type</th>
+        </tr>
 
-<br>
-
-<%= link_to 'New Customer', new_customer_path %>
+      <% @customers.each do |customer| %>
+        <tr>
+          <td><%= link_to customer.first_name+ " " + customer.last_name, customer_path(customer) %></td>
+          <td><%= customer.phone_number %></td>
+          <td><%= customer.email_address %></td>
+          <td><%= customer.address + ", " + customer.city + ", " + customer.postal_code %></td>
+          <td><%= customer.customer_type %></td>
+        </tr>
+        <% end %>
+      </table>
+  </div>
+  </div>
+</div>
