added jobs scaffold and modified customer show page

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -25,6 +25,10 @@
   </div>
 </div>
 
+<%= link_to new_customer_job_path(@customer), class: "btn btn-primary pull-right" do %>
+  <span class="glyphicon glyphicon-plus"></span>&nbsp;&nbsp;Add New Job
+<% end %>
+
 <br /><br />
 
 <div class="panel panel-default">
