--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -13,7 +13,7 @@
         <%= f.input :postal_code, input_html: {class:'form-control'} %>
         <%= f.input :customer_type, collection: ["Retail", "Contractor", "Dealer"], input_html: {class:'form-control'}, prompt: "Select Customer Type" %>
         <br />
-        <%= f.button :submit, input_html: {class:'btn btn-primary'} %>
+        <%= f.button :submit, "Create Customer", class: "col-md-3 bump-right" %>
       <% end %>
     </div>
 </div>
