precompiled assets and reconfigured bootstrap.css.scss to render glyphicons correctly

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -3,6 +3,7 @@ $navbar-default-brand-color:	        #c0392b;
 $navbar-default-bg:                     white;
 $navbar-height:							60px;
 
+@import 'bootstrap-sprockets';
 @import 'bootstrap';
 
 .central-nav {
