datepicker working, installed validates timeliness gem, updated new job form and customer show page, processed some migrations for jobs table

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -5,7 +5,7 @@ $navbar-height:							60px;
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-
+@import 'bootstrap-datetimepicker';
 .central-nav {
 	list-style-type: none;
 	float: none;
