--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,6 @@
  *
  *= require_self
  *= require bootstrap
- *= require bootstrap-datepicker3
+ *= require bootstrap-datetimepicker
  *= require_tree .
  */
