added method to job model to determine revenue for each job and updated the view to show revenue

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -51,7 +51,7 @@
           <td><%= job.job_tag %></td>
           <td></td>
           <td><%= job.install_date %></td>
-          <td></td>
+          <td><%= number_to_currency(job.revenue) %></td>
         </tr>
         <% end %>
       </table>
