added new jobs fields to whitelisted parameters in the jobs controller, modified customer index, show and jobs show views

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -2,10 +2,13 @@ $body-bg:                               #ecf0f1;
 $navbar-default-brand-color:	        #c0392b;
 $navbar-default-bg:                     white;
 $navbar-height:							60px;
+$btn-primary-bg:						#e67e22;
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
+
+
 .central-nav {
 	list-style-type: none;
 	float: none;
