--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,7 +4,7 @@
 
 <br /><br />
 
-<div class="panel panel-default">
+<div class="panel panel-primary">
   <div class="panel-heading">
     <h3 class="panel-title center">Customer Information</h3>
   </div>
