--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -8,23 +8,33 @@ $btn-primary-bg:						#e67e22;
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
 
-
-.central-nav {
-	list-style-type: none;
-	float: none;
-	width: 100%;
-	display: table;
-}
-
-.central-nav li {
-	display: table-cell;
-	float: none;
-}
-
 .center {
 	text-align: center;
 }
 
 .bump-right {
 	margin-left: 55px;
+}
+
+hr.style-one { 
+	border: 0;
+	height: 1px;
+	background: #333;
+	background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
+	background-image: -moz-linear-gradient(left, #ccc, #333, #ccc);
+	background-image: -ms-linear-gradient(left, #ccc, #333, #ccc);
+	background-image: -o-linear-gradient(left, #ccc, #333, #ccc); 
+}
+
+.text-right {
+	text-align: right;
+}
+
+.info-text {
+	color: #e74c3c;
+}
+
+.drop-padding {
+	padding-left: 0px;
+	padding-right: 0px;
 }
