--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -16,7 +16,7 @@
         <tr>
           <td><%= @customer.first_name+ " " + @customer.last_name %></td>
           <td><%= @customer.phone_number %></td>
-          <td><%= @customer.email_address %></td>
+          <td><%= mail_to(@customer.email_address) %></td>
           <td><%= @customer.address + ", " + @customer.city + ", " + @customer.postal_code %></td>
           <td><%= @customer.customer_type %></td>
         </tr>
