updated controllers for new room creation, updated job view page

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -16,6 +16,10 @@ $btn-primary-bg:						#e67e22;
 	margin-left: 55px;
 }
 
+.bump-right-two {
+	margin-left: 10px;
+}
+
 hr.style-one { 
 	border: 0;
 	height: 1px;
